For a more comprehensive changelog for the latest experimental CVS code, see:
        http://scummvm.sourceforge.net/daily/ChangeLog

0.5.7(CVS) (2003-??-??)
 New Games:
   - Added Broken Sword 1 engine, Cutscene support pending...
   - Added Broken Sword 2 engine. Cutscene support pending...
   - Added Flight of the Amazon Queen engine
   - Added support for V1 SCUMM games 'Maniac Mansion' and 'Zak McKracken'

 General:
   - Subtitles now default to disabled. '-n' option now enabled subtitles.
   - Added HQ2x and HQ3x scalers
   - Rewrote sound code for more flexibility and performance
   - Improved native MT32 support
   - Adlib GM emulation table revamped, providing more accurate software MIDI
   - Default Makefile now uses configure script
   - Greatly improved the launcher and options dialogs (work-in-progress)
   - Many other "under the hood" improvements, like a new config managment
	 and plugin capabilities

 Simon:
  - Added data files decoder for Amiga disk versions
  - Added support for inventory graphics in Amiga versions
  - Fixed various brief freezes
  - Fixed minor glitches in load/save dialog in non-English versions
  - Fixed missing inventory arrows in some versions of Simon the Sorcerer 1

 SCUMM:
   - Many, Many, Many SCUMM game engine fixes. Many of them. And that's a lot.
   - Added initial INSANE support for Full Throttle 'action sequences'
   - Added option to choose between Adlib, PCjr and PC Speaker in earlier games.
   - Added Adlib support for indy3ega and loom (ega)
   - Added MIDI support for loom (ega), monkeyega and monkeyvga.
   - Added sound effects support for indy3/monkeyega/monkeyvga/pass
   - Added FM Towns targets for Loom and Indy3
   - Rewrote in-game menu (F5) to be easier to use
   - Improved FM Towns SFX support (YM2612 emulation, looping)
   - Classic V1 versions of Maniac Mansion and Zak McKracken are now supported and completable
   - Rewrote Digital iMUSE music system
   - Several Analog iMUSE music system bugs fixed