@@ -4,9 +4,10 @@ For a more comprehensive changelog for the latest experimental CVS code, see:
 0.5.7(CVS) (2003-??-??)
  New Games:
    - Added Broken Sword 1 engine, Cutscene support pending...
-   - Added Broken Sword 2 engine. Cutscene support pending...
+   - Added Broken Sword 2 engine.
    - Added Flight of the Amazon Queen engine
    - Added support for V1 SCUMM games 'Maniac Mansion' and 'Zak McKracken'
+   - SCUMM game Full Throttle is now supported.
 
  General:
    - Subtitles now default to disabled. '-n' option now enabled subtitles.
